// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiCallOut is rendered 1`] = `
<div>
  <div
    aria-label="aria-label"
    class="ouiCallOut ouiCallOut--primary testClass1 testClass2"
    data-test-subj="test subject string"
  >
    <div
      class="ouiText ouiText--small"
    >
      <div
        class="ouiTextColor ouiTextColor--default"
      >
        Content
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiCallOut props color danger is rendered 1`] = `
<div>
  <div
    class="ouiCallOut ouiCallOut--danger"
  />
</div>
`;

exports[`OuiCallOut props color primary is rendered 1`] = `
<div>
  <div
    class="ouiCallOut ouiCallOut--primary"
  />
</div>
`;

exports[`OuiCallOut props color success is rendered 1`] = `
<div>
  <div
    class="ouiCallOut ouiCallOut--success"
  />
</div>
`;

exports[`OuiCallOut props color warning is rendered 1`] = `
<div>
  <div
    class="ouiCallOut ouiCallOut--warning"
  />
</div>
`;

exports[`OuiCallOut props dismissible close callout after click 1`] = `
<div>
  <div
    class="ouiCallOut ouiCallOut--primary"
    data-test-subj="callOut"
  >
    <div
      class="ouiCallOutHeader"
    >
      <span
        class="ouiCallOutHeader__title"
      >
        This is a callout
      </span>
    </div>
    <button
      aria-label="dismissible_icon"
      class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--empty ouiButtonIcon--xSmall ouiCallOut__closeIcon"
      data-test-subj="closeCallOutButton"
      type="button"
    >
      <span
        aria-hidden="true"
        class="ouiButtonIcon__icon"
        color="inherit"
        data-ouiicon-type="cross"
      />
    </button>
  </div>
</div>
`;

exports[`OuiCallOut props dismissible is not rendered when in danger color 1`] = `
<div>
  <div
    class="ouiCallOut ouiCallOut--danger"
  />
</div>
`;

exports[`OuiCallOut props dismissible is not rendered when in warning color 1`] = `
<div>
  <div
    class="ouiCallOut ouiCallOut--warning"
  />
</div>
`;

exports[`OuiCallOut props dismissible is rendered when set to true 1`] = `
<div>
  <div
    class="ouiCallOut ouiCallOut--primary"
  >
    <button
      aria-label="dismissible_icon"
      class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--empty ouiButtonIcon--xSmall ouiCallOut__closeIcon"
      data-test-subj="closeCallOutButton"
      type="button"
    >
      <span
        aria-hidden="true"
        class="ouiButtonIcon__icon"
        color="inherit"
        data-ouiicon-type="cross"
      />
    </button>
  </div>
</div>
`;

exports[`OuiCallOut props heading h1 is rendered 1`] = `
<div>
  <div
    class="ouiCallOut ouiCallOut--primary"
  />
</div>
`;

exports[`OuiCallOut props heading h2 is rendered 1`] = `
<div>
  <div
    class="ouiCallOut ouiCallOut--primary"
  />
</div>
`;

exports[`OuiCallOut props heading h3 is rendered 1`] = `
<div>
  <div
    class="ouiCallOut ouiCallOut--primary"
  />
</div>
`;

exports[`OuiCallOut props heading h4 is rendered 1`] = `
<div>
  <div
    class="ouiCallOut ouiCallOut--primary"
  />
</div>
`;

exports[`OuiCallOut props heading h5 is rendered 1`] = `
<div>
  <div
    class="ouiCallOut ouiCallOut--primary"
  />
</div>
`;

exports[`OuiCallOut props heading h6 is rendered 1`] = `
<div>
  <div
    class="ouiCallOut ouiCallOut--primary"
  />
</div>
`;

exports[`OuiCallOut props heading p is rendered 1`] = `
<div>
  <div
    class="ouiCallOut ouiCallOut--primary"
  />
</div>
`;

exports[`OuiCallOut props iconType is rendered 1`] = `
<div>
  <div
    class="ouiCallOut ouiCallOut--primary"
  />
</div>
`;

exports[`OuiCallOut props title is rendered 1`] = `
<div>
  <div
    class="ouiCallOut ouiCallOut--primary"
  >
    <div
      class="ouiCallOutHeader"
    >
      <span
        class="ouiCallOutHeader__title"
      >
        Title
      </span>
    </div>
    <div
      class="ouiText ouiText--small"
    >
      <div
        class="ouiTextColor ouiTextColor--default"
      >
        Content
      </div>
    </div>
  </div>
</div>
`;
